--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>com.haris</groupId>
 	<artifactId>Job_portal</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>Job_portal</name>
+	<name>Job_portal_mohini_waghamare</name>
 	<description>email send after registration</description>
 	<url/>
 	<licenses>
